Wrote text for PS5 bot section

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 
                 <h5>Results Overview:</h5>
                 <p>
-                    I set the bot to start with a trading balance of $10,000 USDT which is a cryptocurrency stablecoin pegged to the US Dollar (the exchange I'm using doesn't support normal USD). Looking at the results you can see my trading strategy ended with a balance of $74,781 USDT over a period of about 3 years resulting in a total profit of $64,781 USDT. That's a 647% return on investment!
+                    I set the bot to start with a trading balance of $10,000 USDT which is a cryptocurrency stablecoin pegged to the US Dollar (the exchange I'm using doesn't support normal USD). Looking at the results you can see my trading strategy ended with a balance of $74,781 over a period of about 3 years resulting in a total profit of $64,781. That's a 647% return on investment!
                 </p>
 
 
@@ -473,38 +473,132 @@
                 </div>
 
 
-
                 <div class="section-divider"></div>
 
 
                 <h2>PS5 Purchasing Bot</h2>
 
-                <div class="text-container large-gap">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id nisi non nisi porta hendrerit. Ut sit amet nulla eu urna mattis eleifend. Curabitur mollis malesuada nunc sit amet suscipit. Nam mi felis, rhoncus at porttitor ac, gravida in tellus. Aenean finibus arcu eget enim consectetur, eu varius metus vestibulum. Morbi sodales bibendum sapien sit amet venenatis. Sed iaculis odio eget egestas mollis. Curabitur fringilla nec nulla sit amet egestas. In ipsum dolor, auctor ac porta vitae, fermentum sed orci. Aenean luctus hendrerit turpis. Aliquam cursus, leo sed luctus dapibus, neque erat vulputate tortor, tincidunt tempor massa augue id leo. Aliquam suscipit ligula ut sapien porttitor fermentum. Aliquam erat volutpat.
-                    </p>
+                <p>
+                    2020 was an interesting year to say the least. The COVID-19 pandemic was in full swing and the world was in a state of uncertainty. In particular, the pandemic caused a global shortage of semiconductors which affected the production of many products, including the PlayStation 5.
+                </p>
 
-                    <div class="image-container">
-                        <figure>
-                            <img src="./images/ps5_scalpers.webp" alt="PS5 listings on eBay" />
-                            <figcaption>PS5 listings on eBay by scalpers</figcaption>
-                        </figure>
-                    </div>
+                <p>
+                    The long awaited PlayStation 5 (PS5) launched on November 12, 2020. The launch was highly anticipated but unfortunately, the launch was faced with unprecedented challenges due to global supply chain disruptions and high demand from gamers. This combination of unfortunate circumstances led to massive widespread stock shortages.
+                </p>
 
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id nisi non nisi porta hendrerit. Ut sit amet nulla eu urna mattis eleifend. Curabitur mollis malesuada nunc sit amet suscipit. Nam mi felis, rhoncus at porttitor ac, gravida in tellus. Aenean finibus arcu eget enim consectetur, eu varius metus vestibulum. Morbi sodales bibendum sapien sit amet venenatis. Sed iaculis odio eget egestas mollis. Curabitur fringilla nec nulla sit amet egestas. In ipsum dolor, auctor ac porta vitae, fermentum sed orci. Aenean luctus hendrerit turpis. Aliquam cursus, leo sed luctus dapibus, neque erat vulputate tortor, tincidunt tempor massa augue id leo. Aliquam suscipit ligula ut sapien porttitor fermentum. Aliquam erat volutpat.
-                    </p>
+                <p>
+                    Scalpers and resellers quickly took advantage of the situation and started buying up all of the available PS5s using bots and sold them for huge profits on eBay and other platforms. For example, the PS5 launched with a retail price of $499.99 but scalpers were selling them for over $1,000!
+                </p>
 
-                    <div class="image-container">
-                        <a href="https://github.com/Strip3s/PhoenixBot" target="_blank">
-                            <img src="./images/phoenix_bot.png" alt="Phoenix Bot" />
-                        </a>
-                    </div>
+                <p>
+                    The limited supply of PS5s and the actions of scalpers made it nearly impossible for the average gamer to simply purchase a PS5. Several of my friends were victims of this unfortunate situation and were unable to purchase a PS5 for themselves.
+                </p>
+
+                <div class="image-container">
+                    <figure>
+                        <img src="./images/ps5_scalpers.webp" alt="PS5 listings on eBay" />
+                        <figcaption>PS5 listings on eBay by scalpers</figcaption>
+                    </figure>
                 </div>
 
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id nisi non nisi porta hendrerit. Ut sit amet nulla eu urna mattis eleifend. Curabitur mollis malesuada nunc sit amet suscipit. Nam mi felis, rhoncus at porttitor ac, gravida in tellus. Aenean finibus arcu eget enim consectetur, eu varius metus vestibulum. Morbi sodales bibendum sapien sit amet venenatis. Sed iaculis odio eget egestas mollis. Curabitur fringilla nec nulla sit amet egestas. In ipsum dolor, auctor ac porta vitae, fermentum sed orci. Aenean luctus hendrerit turpis. Aliquam cursus, leo sed luctus dapibus, neque erat vulputate tortor, tincidunt tempor massa augue id leo. Aliquam suscipit ligula ut sapien porttitor fermentum. Aliquam erat volutpat.
+                    Knowing that I am a software engineer, my friends asked me if I knew of any possible solution to this mess of a situation. This led me to researching the problem and I came across a small community of people who were developing their own bot to purchase PS5s. To quote the GitHub repo: 
                 </p>
+
+                <blockquote cite="https://github.com/Strip3s/PhoenixBot">
+                    "Phoenix Bot is inspired by Natewong1313's Bird Bot project yet due to lack of activity by their team. We have decided to revive this project to achieve a common goal. Due to the recent insurgence of botters/scalpers taking advantage, our goal is to enable everyone the ability to combat these botters/scalpers by implementing their own botting system."
+                </blockquote>
+
+                <p>
+                    I was intrigued by the project so I joined their Discord server and quickly became a contributor to the project. Members of the community ranged from normal gamers to people learning to code as well as some experienced software engineers. We were a group of complete strangers but yet we came together to solve a common problem we all had - <u><em>how to purchase a PS5.</em></u> 
+                </p>
+
+
+                <div class="image-container">
+                    <figure>
+                        <a href="https://github.com/Strip3s/PhoenixBot" target="_blank">
+                            <img src="./images/phoenix_bot.png" alt="Phoenix Bot" />
+                        </a>
+                        <figcaption>Phoenix Bot UI</figcaption>
+                    </figure>
+                </div>
+
+                <p>
+                    The codebase was written in Python and used PyQt5 for the UI. Above is an image of the user interface. Now as a reminder, the PS5 was launched in November which meant there was a huge amount of pressure to purchase one before the holidays. Parents wanted to buy one for their kids and some simply wanted to purchase one for themselves. Consequently, the entire community was extremely motivated and determined to achieve success with our Phoenix Bot.
+                </p>
+
+                <p>
+                    Together as a group, we all contributed our knowledge and expertise. Luckily, some of us were educated in software development and website design. The lead developer of the project was a software engineer who was quite knowledgeable about web development and APIs. We quickly split up the work and each of us applied our skills to different parts of the project. Some worked on the UI, some worked on the purchasing logic, and some provided information about when which websites were planning to release stock online.
+                </p>
+                
+
+                <h5>Main Development Tasks:</h5>
+                <ul>
+                    <li>
+                        Program the bot to navigate to a website and find the PS5 product page.
+                    </li>
+                    <li>
+                        Monitor the product page for stock availability.
+                    </li>
+                    <li>
+                        When the product became in stock, add it to the cart.
+                    </li>
+                    <li>
+                        Go through the complete checkout process and fill out all forms on the way.
+                    </li>
+                    <li>
+                        Handle any unexpected errors or interruptions that may occur.
+                    </li>
+                    <li>
+                        Fill out the payment information and successfully complete the purchase!
+                    </li>
+                </ul>
+
+                <div class="image-container">
+                    <figure>
+                        <img src="./images/ps5_product_page.png" alt="PS5 Product Page" onclick="openFullscreen(this)" class="clickable-image"/>
+                        <figcaption>PS5 Product Page</figcaption>
+                    </figure>
+                </div>
+
+                <p>
+                    We focused on developing the bot to work on the main online retailers since they were likely to have the most available stock. The main sites we worked on were Amazon, Best Buy, GameStop, Target, and Walmart. I took on the task of engineering the bot to work on GameStop and Target.
+                </p>
+
+                <p>
+                    On nights and weekends, I was dedicated to working on the bot. We had to make the bot fast, we had to make it reliable, we had to make it efficient, and most importantly, <u><em>we had to make it work.</em></u>  
+                </p>
+
+                <p>
+                    Step by step we started implementing key functionality of the bot. Day by day we became closer and closer to achieving our shared goal. During the development process, PS5s would be released online and some of us would try to purchase one manually themselves. Unfortunately, scalpers and their bots were still running rampant making it nearly impossible to be triumphant. Some members of the community were able to purchase one manually but it was still a rare occurrence. Our goal of making it possible for all of us to successfully purchase a PS5 was still yet to be achieved.
+                </p>
+
+                <p>
+                    Eventually, we implemented the majority of the key features of the bot. We figured out how to program the bot to navigate websites, monitor product pages, add items to the cart, and fill out forms. It was a great feeling seeing the bot become more and more functional! It was awesome being able to run the bot and watch it work as it filled out forms and go through the checkout process. We made sure to do extensive testing because it was <em>critical</em> that the bot worked as expected when the time came to attempt to purchase a PS5.
+                </p>
+
+                <p>
+                    However, not everything went smoothly. Retailers started to add anti-bot measures to their websites to prevent scalpers from purchasing PS5s. This was a benefit to the average consumer but it made our job more difficult. Not only did we have to compete against bots by the scalpers but now we had to figure out how to bypass the retailers' anti-bot measures!
+                </p>
+
+                <p>
+                    Finally the time came where our bot was fully ready to be used. I finished implementing the bot to work on GameStop and Target. Now all that was left was to run the bot, wait for the PS5s to be released online, and hope everything worked as expected. We diligently researched when the retailers were planning to release stock online and kept up with latest rumors and news about PS5 availability. We would leave the bot running 24/7 and hoped for the best.
+                </p>
+
+                <p>
+                    One night we had news Target was going to release stock sometime between 2:00am - 4:00am in the morning. Before I went to bed, I turned on the bot and set it to run on Target's website. In the morning when I woke up, I immediately got out of bed and rushed to my computer to see what had happened overnight. That was when I saw it, the final purchase confirmation screen of my very own PS5! The bot was a success!! All of our hard work and dedication finally paid off and I was able to enjoy the victory of my own hard work! It was a glorious moment and a moment I will always remember.
+                </p>
+
+                <p>
+                    Day by day, more and more members of the community were successfully able to purchase a PS5 using our bot. It was a great feeling knowing that we were able to help so many people achieve their long awaited goal. Some members even shipped extra PS5s they bought to other members of the community to make sure as many of us as possible were able to get a PS5.
+                </p>
+
+
+                <div class="text-container large-gap">
+                    <p>
+                        As time went on, thanks to our bot as well as PS5 availability becoming better, pretty much all of us were able to purchase a PS5. With our goal finally being achieved, we naturally no longer needed to work on the bot. Its purpose was accomplished and we were able to enjoy the fruits of our labor.
+                    </p>
+                </div>
 
                 <div class="tilt-card-container">
                     <div class="tilt-card image-container">
@@ -521,9 +615,6 @@
                 <div class="text-container large-gap">
                     <p>
                         This website was created by me to showcase my projects and skills. All of the code for this website is available to look at on my GitHub account.
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id nisi non nisi porta hendrerit. Ut sit amet nulla eu urna mattis eleifend. Curabitur mollis malesuada nunc sit amet suscipit. Nam mi felis, rhoncus at porttitor ac, gravida in tellus. Aenean finibus arcu eget enim consectetur, eu varius metus vestibulum. Morbi sodales bibendum sapien sit amet venenatis. Sed iaculis odio eget egestas mollis. Curabitur fringilla nec nulla sit amet egestas. In ipsum dolor, auctor ac porta vitae, fermentum sed orci. Aenean luctus hendrerit turpis. Aliquam cursus, leo sed luctus dapibus, neque erat vulputate tortor, tincidunt tempor massa augue id leo. Aliquam suscipit ligula ut sapien porttitor fermentum. Aliquam erat volutpat.
                     </p>
                 </div>
 
