Wrote text for last section

--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/ps5_scalpers.webp" alt="PS5 listings on eBay" />
+                        <img src="./images/ps5_scalpers.webp" alt="PS5 listings on eBay" onclick="openFullscreen(this)" class="clickable-image"/>
                         <figcaption>PS5 listings on eBay by scalpers</figcaption>
                     </figure>
                 </div>
@@ -612,9 +612,46 @@
 
                 <h2>This Website</h2>
 
+                <p>
+                    This website was created by me to showcase my experience, projects, and website/visual design skills. I wrote all of the code for this website myself from scratch (HTML, CSS, and JavaScript). I chose the design, layout, typography, and colors of the website. I did not use any pre-made templates, themes, or frameworks.
+                </p>
+                
+
+                <h5>Notable Features:</h5>
+                <ul>
+                    <li>
+                        Web Responsive Design: I created the website to be fully responsive and adapt to different screen sizes by using automatically scaling font sizes and margins that maintain the layout of the website. If you are on a desktop computer, change the size of your browser window and watch the website adapt to the new size.
+                    </li>
+                    <li>
+                        Implemented a progress bar on the top navigation bar to show how far along the user is in the website.
+                    </li>
+                    <li>
+                        Created a side navigation bar that automatically updates to show the current section the user is at. (Disabled on mobile devices due to limited screen space) 
+                    </li>
+                    <li>
+                        If you move your mouse over the main headings of the website (e.g. "Welcome", "Education"), a text shadow effect occurs.
+                    </li>
+                    <li>
+                        If you move your mouse over one of the images on the website, the image will have a slight pop-out effect.
+                    </li>
+                    <li>
+                        The image of Geisel Library during sunset in the Education section utilizes a parallax scrolling effect.
+                    </li>
+                    <li>
+                        If you move your mouse over the PS5 Pro image above or the image below of the GitHub repository for this website, the image will have a cool special effect!
+                    </li>
+                    <li>
+                        Some of the images on the website have built in links that will take you to relevant information when clicked on. If you click on the image below it will take you to the GitHub repository for this website.
+                    </li>
+                    <li>
+                        Note: some of these features are disabled for mobile devices due to mobile browser limitations.
+                    </li>
+                </ul>
+
+
                 <div class="text-container large-gap">
                     <p>
-                        This website was created by me to showcase my projects and skills. All of the code for this website is available to look at on my GitHub account.
+                        All of the code for this website is available to look at on my GitHub account. Just click on the GitHub icon in the top navigation bar or click on the image below to view the repository.
                     </p>
                 </div>
 
