--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Aaron Hurtado's personal website showcasing software engineering portfolio, experience, and projects">
-    <meta name="keywords" content="Aaron Hurtado, Software Engineer, Web Development, Portfolio, Resume">
+    <meta name="description" content="Aaron Hurtado's personal website showcasing software engineering portfolio, resume, experience, and projects">
+    <meta name="keywords" content="Aaron Hurtado, Software Engineer, Web Development, Portfolio, Resume, Projects">
     <meta name="author" content="Aaron Hurtado">
 
     <meta property="og:title" content="Aaron Hurtado's Website">
-    <meta property="og:description" content="Aaron Hurtado's personal website showcasing software engineering portfolio, experience, and projects">
-    <!-- <meta property="og:url" content=""> -->
+    <meta property="og:description" content="Aaron Hurtado's personal website showcasing software engineering portfolio, resume, experience, and projects">
+    <meta property="og:url" content="https://www.aaronhurtado.com/">
 
     <title>Aaron Hurtado's Website</title>
 
