--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                 </pre>
 
                 <p>
-                    The timeframe variable determines what candle length the strategy will use (e.g. 15m, 1h, 4h, 1d etc.). Some people use short 15m or 1h timeframes while others use longer timeframes such as 8h or 1d.
+                    The timeframe variable determines what candle length the strategy will use (e.g. 15m, 1h, 4h, 1d etc.). Some people use short timeframes such as 15m or 1h while others use longer timeframes, for instance 8h or 1d.
                 </p>
                 
                 <p>
@@ -440,7 +440,7 @@
                 </p>
 
                 <p>
-                    Setting the minimal_roi value to 0.01 means that the strategy will only sell a position if the profit is at least 1% above the initial entry price.
+                    On line 13 setting the minimal_roi value to 0.01 means that the strategy will only sell a position if the profit is at least 1% above the initial entry price.
                 </p>
 
                 
