Added more details to PS5 bot section

--- a/index.html
+++ b/index.html
@@ -641,6 +641,10 @@
                 </p>
 
                 <p>
+                    For instance, an easy way to detect a bot is to check how fast the user is navigating and interacting with the website. If the user is navigating the website too fast, it is likely a bot. To combat this, we added a random delay between actions the bot takes to make it seem more human-like.
+                </p>
+
+                <p>
                     Finally the time came where our bot was fully ready to be used. I finished implementing the bot to work on GameStop and Target. Now all that was left was to run the bot, wait for the PS5s to be released online, and hope everything worked as expected. We diligently researched when the retailers were planning to release stock online and kept up with latest rumors and news about PS5 availability. We would leave the bot running 24/7 and hoped for the best.
                 </p>
 
